<resources>
    <string name="app_name">Project Expense Tracker</string>
    <string name="title_add_project">New Project</string>
    <string name="hint_project_code">Project Code</string>
    <string name="hint_project_name">Project Name</string>
    <string name="hint_description">Project Description</string>
    <string name="hint_manager">Lead Architect / Manager</string>
    <string name="hint_budget">Total Budget ($)</string>
    <string name="hint_start_date">Scheduled Start</string>
    <string name="hint_end_date">Scheduled End</string>
    <string name="hint_status">Operational Status</string>
    <string name="hint_difficulty">Job Difficulty</string>
    <string name="btn_review_project">Save Project</string>
</resources>